Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  display_name varchar(100)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table devices {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  name varchar(100)
  fingerprint varchar(255)
  last_seen_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table api_keys {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  device_id uuid
  key_hash varchar(255) [not null]
  label varchar(100)
  revoked_at timestamptz
  expires_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table target_sites {
  id uuid [pk, default: `gen_random_uuid()`]
  base_domain varchar(255) [not null]
  name varchar(100) [not null]
  base_url varchar(2048) [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table original_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  target_site_id uuid [not null]
  device_id uuid
  status varchar(20) [not null, default: 'active']
  label varchar(100)
  imported_at timestamptz [not null, default: `now()`]
  expires_at timestamptz
}

Table session_cookies {
  id uuid [pk, default: `gen_random_uuid()`]
  original_session_id uuid [not null]
  name varchar(255) [not null]
  value_encrypted text [not null]
  domain varchar(255)
  path varchar(1024) [not null, default: '/']
  secure boolean [not null, default: false]
  http_only boolean [not null, default: false]
  same_site varchar(10)
  expires_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table session_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  original_session_id uuid [not null]
  token_type varchar(50) [not null]
  header_name varchar(100)
  value_encrypted text [not null]
  expires_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table shared_links {
  id uuid [pk, default: `gen_random_uuid()`]
  original_session_id uuid [not null]
  token varchar(255) [unique, not null]
  status varchar(20) [not null, default: 'active']
  label varchar(100)
  created_at timestamptz [not null, default: `now()`]
  expires_at timestamptz
}

Table access_policies {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  name varchar(100) [not null]
  max_requests int
  max_bytes_transferred bigint
  max_ttl_seconds int
  max_violation_count int [default: 3]
  created_at timestamptz [not null, default: `now()`]
}

Table link_policies {
  link_id uuid [not null]
  policy_id uuid [not null]

  indexes {
    (link_id, policy_id) [pk]
  }
}

Table blacklisted_endpoints {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  pattern varchar(1024) [not null]
  pattern_type varchar(20) [not null, default: 'prefix']
  description text
  created_at timestamptz [not null, default: `now()`]
}

Table endpoint_blocked_methods {
  endpoint_id uuid [not null]
  http_method varchar(10) [not null]

  indexes {
    (endpoint_id, http_method) [pk]
  }
}

Table site_endpoint_rules {
  target_site_id uuid [not null]
  endpoint_id uuid [not null]

  indexes {
    (target_site_id, endpoint_id) [pk]
  }
}

Table link_endpoint_rules {
  link_id uuid [not null]
  endpoint_id uuid [not null]

  indexes {
    (link_id, endpoint_id) [pk]
  }
}

Table guests {
  id uuid [pk, default: `gen_random_uuid()`]
  ip_address varchar(45)
  user_agent text
  browser_fingerprint varchar(255)
  first_seen_at timestamptz [not null, default: `now()`]
  last_seen_at timestamptz
}

Table guest_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  shared_link_id uuid [not null]
  guest_id uuid
  status varchar(20) [not null, default: 'active']
  started_at timestamptz [not null, default: `now()`]
  last_request_at timestamptz
  terminated_at timestamptz
}

Table usage_counters {
  id uuid [pk, default: `gen_random_uuid()`]
  shared_link_id uuid [unique, not null]
  request_count int [not null, default: 0]
  bytes_transferred bigint [not null, default: 0]
  violation_count int [not null, default: 0]
  updated_at timestamptz [not null, default: `now()`]
}

Table proxy_access_logs {
  id bigserial [pk]
  guest_session_id uuid
  shared_link_id uuid [not null]
  target_url varchar(2048) [not null]
  http_method varchar(10) [not null]
  response_status int
  bytes_transferred int
  response_time_ms int
  requested_at timestamptz [not null, default: `now()`]
}

Table revocation_reasons {
  id serial [pk]
  code varchar(50) [unique, not null]
  description text
}

Table link_terminations {
  id uuid [pk, default: `gen_random_uuid()`]
  shared_link_id uuid [not null]
  reason_id int [not null]
  terminated_by uuid
  notes text
  terminated_at timestamptz [not null, default: `now()`]
}

Table security_events {
  id bigserial [pk]
  guest_session_id uuid
  shared_link_id uuid [not null]
  event_type varchar(50) [not null]
  target_url varchar(2048)
  http_method varchar(10)
  details jsonb
  occurred_at timestamptz [not null, default: `now()`]
}

Ref: devices.user_id > users.id
Ref: api_keys.user_id > users.id
Ref: api_keys.device_id > devices.id

Ref: original_sessions.user_id > users.id
Ref: original_sessions.target_site_id > target_sites.id
Ref: original_sessions.device_id > devices.id
Ref: session_cookies.original_session_id > original_sessions.id
Ref: session_tokens.original_session_id > original_sessions.id

Ref: shared_links.original_session_id > original_sessions.id
Ref: access_policies.user_id > users.id
Ref: link_policies.link_id > shared_links.id
Ref: link_policies.policy_id > access_policies.id
Ref: blacklisted_endpoints.user_id > users.id
Ref: endpoint_blocked_methods.endpoint_id > blacklisted_endpoints.id
Ref: site_endpoint_rules.target_site_id > target_sites.id
Ref: site_endpoint_rules.endpoint_id > blacklisted_endpoints.id
Ref: link_endpoint_rules.link_id > shared_links.id
Ref: link_endpoint_rules.endpoint_id > blacklisted_endpoints.id

Ref: guest_sessions.shared_link_id > shared_links.id
Ref: guest_sessions.guest_id > guests.id
Ref: usage_counters.shared_link_id - shared_links.id

Ref: proxy_access_logs.guest_session_id > guest_sessions.id
Ref: proxy_access_logs.shared_link_id > shared_links.id
Ref: link_terminations.shared_link_id > shared_links.id
Ref: link_terminations.reason_id > revocation_reasons.id
Ref: link_terminations.terminated_by > users.id
Ref: security_events.guest_session_id > guest_sessions.id
Ref: security_events.shared_link_id > shared_links.id
